fix height to avoid vertical jumps

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html {
   overflow-x: hidden;
   overflow-y: auto;
+  height: 110%;
 }
 
 body {
